    help problems people have reported, and enable us to add additional 
    help as necessary.

* Fri Aug 15 19:07:43 2003, pabs <pabs@pablotron.org>
  * raggle: added $config['thread_priority_{main,feed}'], with the main
    thread priority set much higher than the grabbing (feed) thread.  Should
    fix UI stalls when grabbing feeds.

* Fri Aug 15 19:13:18 2003, pabs <pabs@pablotron.org>
  * raggle: handle &copy; and &trade; entities

* Fri Aug 15 19:17:36 2003, pabs <pabs@pablotron.org>
  * README: added Ville Aine as an author.
  * AUTHORS: updated Ville Aine's entry (added HTML renderer)
  * README: added RSS feeds for Richard and myself.
  * raggle: added RSS feeds for Richard and myself.
  (Ville, do you have a web site?)

* Sat Aug 16 08:57:25 2003, pabs <pabs@pablotron.org>
  * TODO: marked off some stuff that's been done
  * raggle: added Ville to the list of authors
  * raggle: added HTTP proxy support (via $config['proxy'] or, if that
    isn't set, the http_proxy and no_proxy environment variables)
  * raggle: --invalidate now accepts -1 to invalidate all feeds
  * raggle: added conditional HTTP GET support (doesn't fetch or parse 
    unless the Last-Modified header has changed)
  * raggle: --add only requires a URL now
  * raggle: removed a few old comments
  * raggle: updated KernelTrap feed URL.
  * raggle: added paulduncan.org and richlowe.net to default feed list.
  * README: updated --add documentation in "Getting Started".
  * README: mention Raggle mailing list in "Getting Started".
  * raggle: added 'select_first' focus type.  doesn't work yet, but 
    eventually it'll be the select first item on activate mode.

* Sat Aug 16 12:16:23 2003, pabs <pabs@pablotron.org>
  (in the last commit, but I forgot to mention it).
  * raggle: wrap the external libraries with a slightly more intuitive
    error message.  it points people at the README or the web-based
    installation instructions if YAML, REXML, or Ncurses-Ruby are 
    missing.