@@ -1009,3 +1009,6 @@
     error message.  it points people at the README or the web-based
     installation instructions if YAML, REXML, or Ncurses-Ruby are 
     missing.
+
+* Sat Aug 16 12:20:40 2003, pabs <pabs@pablotron.org>
+  * doc/pauls_feeds.yaml: updated Richard's feed URL.  Ditto for mine.
